--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,13 +25,14 @@
     <servlet-name>Servletregister</servlet-name>
     <servlet-class>com.softserve.controller.ServletRegister</servlet-class>
 </servlet>
-    <servlet>
-        <servlet-name>Servletroot</servlet-name>
-        <servlet-class>com.softserve.controller.ServletOrder</servlet-class>
-    </servlet>
+
     <servlet>
         <servlet-name>Servletlogin</servlet-name>
         <servlet-class>com.softserve.controller.ServletLogin</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Servletorder</servlet-name>
+        <servlet-class>com.softserve.controller.ServletOrder</servlet-class>
     </servlet>
 
     <servlet-mapping>
@@ -40,11 +41,12 @@
     </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>Servletroot</servlet-name>
-        <url-pattern>/root</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>Servletlogin</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Servletorder</servlet-name>
+        <url-pattern>/order</url-pattern>
+    </servlet-mapping>
+
 </web-app>
